@@ -1,6 +1,7 @@
 TODO
 ====
 1. Finish tests.
+Missing test for translation and error (_text) in CSS.
 2. Rewrite to Tags::HTML::Element.
 3. Add check for messages in init()
    Use Tags::HTML::Messages check. Prevent double check.
